tests/ui/field.stderr
error: #[untagged] at an invalid position
 --> $DIR/field.rs:8:9
  |
8 |         #[untagged]
  |         ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/field.rs:13:15
   |
13 |     struct S2(#[tag = 1] String);
   |               ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/field.rs:16:15
   |
16 |     struct S3(#[optional] String);
   |               ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:19:15
   |
19 |     struct S4(#[untagged] String);
   |               ^^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/field.rs:22:15
   |
22 |     struct S8(#[flatten] String);
   |               ^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/field.rs:27:9
   |
27 |         #[tag = 0]
   |         ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:34:9
   |
34 |         #[untagged]
   |         ^^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/field.rs:41:9
   |
41 |         #[optional]
   |         ^^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/field.rs:48:9
   |
48 |         #[flatten]
   |         ^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/field.rs:54:9
   |
54 |         #[tag = 1]
   |         ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/field.rs:61:9
   |
61 |         #[optional]
   |         ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:72:9
   |
72 |         #[untagged]
   |         ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/field.rs:77:15
   |
77 |     struct S2(#[tag = 1] String);
   |               ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/field.rs:80:15
   |
80 |     struct S3(#[optional] String);
   |               ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:83:15
   |
83 |     struct S4(#[untagged] String);
   |               ^^^^^^^^^^^

error: #[flatten] at an invalid position
  --> $DIR/field.rs:86:15
   |
86 |     struct S8(#[flatten] String);
   |               ^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/field.rs:91:9
   |
91 |         #[tag = 0]
   |         ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:98:9
   |
98 |         #[untagged]
   |         ^^^^^^^^^^^

error: #[optional] at an invalid position
   --> $DIR/field.rs:105:9
    |
105 |         #[optional]
    |         ^^^^^^^^^^^

error: #[flatten] at an invalid position
   --> $DIR/field.rs:112:9
    |
112 |         #[flatten]
    |         ^^^^^^^^^^

error: #[tag] at an invalid position
   --> $DIR/field.rs:118:9
    |
118 |         #[tag = 1]
    |         ^^^^^^^^^^

error: #[optional] at an invalid position
   --> $DIR/field.rs:125:9
    |
125 |         #[optional]
    |         ^^^^^^^^^^^
